security/tls/upstream-tls/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-tls-server
  name: example-tls-server
spec:
  selector:
    matchLabels:
      app: example-tls-server
  replicas: 1
  template:
    metadata:
      labels:
        app: example-tls-server
    spec:
      containers:
        - image: docker.io/soloio/example-tls-server:latest
          imagePullPolicy: Always
          name: example-tls-server
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: example-tls-server
  labels:
    service: example-tls-server
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: example-tls-server
